Changes for Java 24